# jabra-browser-integration

./: .gitignore  API.md  AmazonConnect.md  BETA.md  CHANGELOG.md  Deployment.md  LICENSE  README.md  copy_examples_to_doc_repo.bat  copy_examples_to_doc_repo_excludes.lst  package.json
ChromeWebExtension/: content-script.js
docs/: API.md  BrowserSDKDependenciesAndTest.vsdx  BrowserSDKVersioningStrategy.vsdx  Deployment.md  JabraAmazonConnectGuide.md  JabraBrowserIntegration.docx  developer_internals.md  diagrams_source.txt  release-steps.md
downloads/: JabraChromeHost0.5.dmg  JabraChromeHost0.51.msi  JabraChromeHost2.0.0.dmg  JabraChromeHost2.0.0.msi  JabraChromeHost2.0.2.dmg  JabraChromeHost2.0.2.msi  JabraChromeHost2.0RC1.dmg  JabraChromeHost2.0RC2.dmg  JabraChromeHost2.0beta1.msi  JabraChromeHost2.0beta2.msi  JabraChromeHost2.0beta3.msi  JabraChromeHost2.0beta4.msi  JabraChromeHost2.0beta5.msi  JabraChromeHost2.0beta6.msi  JabraChromeHost2.0beta7.msi  JabraChromeHost2.0beta8.msi  JabraChromeHost2.1.0-beta10.dmg  JabraChromeHost2.1.0-beta10.msi  JabraChromeHost2.1.0-beta10.pkg  JabraChromeHost2.1.0-beta11.dmg  JabraChromeHost2.1.0-beta11.msi  JabraChromeHost2.1.0-beta11.pkg  JabraChromeHost2.1.0-beta7.dmg  JabraChromeHost2.1.0-beta7.msi  JabraChromeHost2.1.0-beta8.dmg  JabraChromeHost2.1.0-beta8.msi  JabraChromeHost2.1.0-beta8.pkg  (+8 more)
src/ChromeHost/: App.cpp  App.h  CMakeLists.txt  CMakeSettings.json  CmdGetActiveDevice.cpp  CmdGetActiveDevice.h  CmdGetDevices.cpp  CmdGetDevices.h  CmdGetInstallInfo.cpp  CmdGetInstallInfo.h  CmdGetVersion.cpp  CmdGetVersion.h  CmdHold.cpp  CmdHold.h  CmdInterface.cpp  CmdInterface.h  CmdMute.cpp  CmdMute.h  CmdOffHook.cpp  CmdOffHook.h  CmdOnHook.cpp  CmdOnHook.h  CmdResume.cpp  CmdResume.h  CmdRing.cpp  CmdRing.h  CmdSetActiveDevice.cpp  CmdSetActiveDevice.h  CmdSetBusyLight.cpp  CmdSetBusyLight.h  CmdSetMmiFocus.cpp  CmdSetMmiFocus.h  CmdSetRemoteMmiLightAction.cpp  CmdSetRemoteMmiLightAction.h  CmdUnRing.cpp  CmdUnRing.h  CmdUnmute.cpp  CmdUnmute.h  Constants.h  Context.h  (+37 more)
src/ChromeHost/SDK/: Common.h  JabraDeviceConfig.h  JabraNativeHid.h  errorcodes.inc  returncodes.inc
src/ChromeHost/SDKLinux/32-bit/: libjabra.so.1.7.3.4  libjabra.so.1.8.3.10  libjabra.so.1.8.7.11  libjabra.so.1.8.7.12
src/ChromeHost/SDKLinux/64-bit/: libjabra.so.1.0.11.1  libjabra.so.1.10.1.0  libjabra.so.1.7.3.4  libjabra.so.1.8.3.10  libjabra.so.1.8.7.11  libjabra.so.1.8.7.12  libjabra.so.1.8.8.4
src/ChromeHost/SDKUbuntu/32-bit/: libjabra.so.1.0.11.1
src/ChromeHost/SDKWindows/: libjabra.lib
src/ChromeHost/SDKmacOS/: libjabra.dylib  libjsoncpp.1.dylib
src/ChromeHost/include/plog/: Record.h
(+207 files in other folders)
